<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.jonathan.minesweeper2.homeScreen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:gravity="top"
        android:text="@string/homescreen_text"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:gravity="top"
        android:text="@string/homescreen_text2"
        android:textSize="25dp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/errorText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:onClick="startGame"
        android:text="@string/homescreen_start" />

    <EditText
        android:id="@+id/rows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/columns"
        android:layout_alignStart="@+id/columns"
        android:layout_below="@+id/rowsInstruct"
        android:hint="Min: 3, Max: 8"
        android:imeOptions="actionNext"
        android:inputType="phone" />

    <EditText
        android:id="@+id/columns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/columnsInstruct"
        android:layout_centerHorizontal="true"
        android:hint="Min: 3, Max: 8"
        android:imeOptions="actionNext"
        android:inputType="phone" />

    <EditText
        android:id="@+id/mines"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/minesInstruct"
        android:layout_centerHorizontal="true"
        android:hint="Min: 3"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:selectAllOnFocus="false"
        android:singleLine="false" />

    <TextView
        android:id="@+id/columnsInstruct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rows"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/homescreen_columns"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rowsInstruct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/minesInstruct"
        android:layout_alignRight="@+id/minesInstruct"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="26dp"
        android:text="@string/homescreen_rows"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/minesInstruct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/columns"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/homescreen_mines"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mines"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:textSize="14sp"
        android:text="@string/err"
        android:textAlignment="center"
        android:textColor="#ff0000"
        android:visibility="invisible" />


</RelativeLayout>
